@@ -1,3 +1,8 @@
+2007-12-07  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh:
+	(CygbuildCmdInstallCheckMain): Fix status code assignment.
+
 2007-12-05  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh
